objects/TEACstmrProfile__A_Customer_Profile_Attachment__c.object
<CustomObject>
    <description>Custom Attachments list for &quot;A&quot; Customer Profiles.</description>
    <fields>
        <fullName>TEACstmrProfile__A_Customer_Profile__c</fullName>
        <label>&quot;A&quot; Customer Profile</label>
        <referenceTo>TEACstmrProfile__A_Customer_Profile__c</referenceTo>
        <relationshipLabel>&quot;A&quot; Customer Profile Attachments</relationshipLabel>
        <relationshipName>A_Customer_Profile_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Author__c</fullName>
        <label>Author</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Content_Type__c</fullName>
        <label>Content Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Description__c</fullName>
        <label>Description</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Send_Attachment_to_Executive_Dashboard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Attachment to Executive Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Title__c</fullName>
        <description>title of attachment</description>
        <label>Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>&quot;A&quot; Customer Profile Attachment</label>
    <listViews>
        <fullName>TEACstmrProfile__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>&quot;A&quot; Customer Profile Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>